Tests/Error/Handling/.build/throwerror.pr
{
  "name": "ThrowError",
  "description": "Throws an error with the provided message and a null payload.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "throw error \u0022something went wrong\u0022",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "Message",
              "value": "something went wrong",
              "type": "tstring"
            },
            {
              "name": "StatusCode",
              "value": 500,
              "type": "int"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/ThrowError.goal",
  "prPath": "/.build/throwerror.pr",
  "hash": "760733522882f786b33a29656b13a929e3aabde1a27dbce83d60c95e0290a596",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}